After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747860 - Sometimes, after crash, the session_state.xml file has lost most of the bookmarks
Sometimes, after crash, the session_state.xml file has lost most of the bookm...
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.16.x (obsolete)
Other Linux
: Normal critical
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
: 740719 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-04-14 15:20 UTC by Andres Gomez
Modified: 2018-03-25 19:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-session: Save the pending API request URL if EphyWebView address is about:blank (1.42 KB, patch)
2016-02-22 10:53 UTC, Carlos Garcia Campos
committed Details | Review

Description Andres Gomez 2015-04-14 15:20:37 UTC
WKGTK 2.8.0 and Epiphany 3.16.0

Epiphany is running with the dconf key:

"process-model" = "shared-secondary-process"

---

In last epiphany versions I've noticed an annoying regression.

Previously, when ephy would crash, I would know that my open tabs would be safely stored in $HOME/.config/epiphany/session_state.xml

In the last months (at least since October 2014), I've noticed that the session_state.xml is not always saved correctly. Quite often, after a crash, the tabs that were not loaded during the session will be stored as about:blank.

With "tabs that were not loaded during the session" I mean, in the simplest example:

I run a clean epiphany session -> 1 window with 1 tab.

I open a second tab in the window. The tab is loaded. I come back to the first tab. I closed epiphany completely.

I open epiphany again -> 1 window with 2 tabs. The tab that I was visiting when I closed the previous session is the one focused and the one loaded. The other tab won't load until I visit it.

Now, without having the second tab loaded, ephy crashes.

I open epiphany again -> 1 window with 2 tabs. The tab that I didn't visit in the last crashed session and, hence, didn't load, has lost its bookmark and now points to about:blank.
Comment 1 Andres Gomez 2015-10-05 11:05:40 UTC
Similar to bug 719334, although not the same.
Comment 2 Andres Gomez 2015-10-05 11:07:36 UTC
Similar to bug 740719, although not the same.
Comment 3 Andres Gomez 2016-01-24 22:33:29 UTC
Still happening in Epiphany 3.18.0 and WebKit 2.10.5
Comment 4 Carlos Garcia Campos 2016-02-22 10:53:22 UTC
Created attachment 321818 [details] [review]
ephy-session: Save the pending API request URL if EphyWebView address is about:blank
Comment 5 Michael Catanzaro 2016-02-22 14:05:55 UTC
Review of attachment 321818 [details] [review]:

Yay, this one had me stumped.
Comment 6 Michael Catanzaro 2016-02-24 19:18:36 UTC
Attachment 321818 [details] pushed as 1d98783 - ephy-session: Save the pending API request URL if EphyWebView address is about:blank
Comment 7 Michael Catanzaro 2016-06-03 16:36:55 UTC
*** Bug 719334 has been marked as a duplicate of this bug. ***
Comment 8 Michael Catanzaro 2016-06-03 16:37:06 UTC
*** Bug 740719 has been marked as a duplicate of this bug. ***
Comment 9 Andres Gomez 2016-10-07 22:38:04 UTC
I didn't reopen at the time because bug 719334 was still open with a similar problem. Now that it has been closed as WONTFIX, it makes sense to reopen this one since it is the one that describer closely the problem.

This is still reproducible in the latest versions of WKGTK+ and Ephy. The difference is that it just happens less often.

Usually, a single crash will be recovered properly but, sometimes, if after a crash, we open again and we DO NOT reload every single tab by revisiting it, if it crashes again, then we lose those unloaded tabs for good. This is not reproducible 100% but it is not that difficult to reproduce either.
Comment 10 Michael Catanzaro 2018-03-25 19:11:17 UTC
I'm hoping this is thoroughly fixed now by https://git.gnome.org/browse/epiphany/commit/?h=gnome-3-26&id=370b87f27fa9ad8be201d33f4eb6cf5ec39e3f56 and https://git.gnome.org/browse/epiphany/commit/?h=gnome-3-26&id=fd280d3ff9d27b06d75498d373d7eae0d0dbac0a. At least, I haven't seen this bug since those commits.